# libcli

./: .gitignore  CMakeLists.txt  NOTICE.txt  README.md  TODO
examples/: CMakeLists.txt  alternative_buffer.cc  demo.cc  main.cc  test.cc
include/libcli/: common.hh  errors.hh  handle.hh  libcli.hh  unix.hh  win32.hh
src/: handle.cc  libcli.cc  linux.cc  version.hh.in  win32.cc
